# openssh-portable

./: # sc25519.h  .cvsignore  .depend  .git_allowed_signers  .git_allowed_signers.asc  .gitignore  .skipped-commit-ids  COPYING.Ylonen  CREDITS  ChangeLog  ChangeLog.linux  FUNDING.yml  HPN-README  HPNSSHInstallation.txt  INSTALL  Jenkinsfile  LICENCE  Makefile  Makefile.GNU  Makefile.in  Mobile SSH  PROTOCOL  PROTOCOL.agent  PROTOCOL.certkeys  PROTOCOL.chacha20poly1305  PROTOCOL.key  PROTOCOL.mux  README  README.Ylonen  README.dns  README.keylog  README.md  README.obfuscation  README.openssh  README.openssh2  README.platform  README.privsep  README.smartcard  README.tun  README_wolfssl  (+529 more)
.circleci/: config.yml
.github/: CI-Test.txt  FUNDING.yml  ci-status.md  configs  configure.sh  install_dropbear.sh  install_libcrypto.sh  pin_actions.sh  readme.md  run_test.sh  setup_ci.sh
.github/workflows/: LOBANOV.yml  c-cpp.yml  ccpp.yml  cifuzz.yml  cmake-multi-platform.yml  codeql-analysis.yml  crunch42-analysis.yml  devskim-analysis.yml  flawfinder-analysis.yml  kubesec-analysis.yml  prisma-analysis.yml  selfhosted.yml  snyk-infrastructure-analysis.yml  snyk_infrastructure-analysis.yml  stackhawk-analysis.yml  synopsys-io-analysis.yml  upstream.yml  vm-dragonflybsd.yml  vm-freebsd.yml  vm-netbsd.yml  vm-omnios.yml  vm-openbsd.yml  vm-solaris.yml  vm.yml
contrib/: Makefile  README  SecurID.diff  chroot.diff  findssl.sh  gnome-ssh-askpass.c  gnome-ssh-askpass1.c  gnome-ssh-askpass2.c  gnome-ssh-askpass3.c  gnome-ssh-askpass4.c  make-ssh-known-hosts.1  make-ssh-known-hosts.pl  mdoc2man.pl  openssh-2.5.2p1+SecurID_v1.README  openssh-2.5.2p1+SecurID_v1.patch  screen_lock_hook.sh  ssh-copy-id  ssh-copy-id.1
contrib/aix/: README  buildbff.sh  inventory.sh
contrib/caldera/: openssh.spec  ssh-host-keygen  sshd.daemons  sshd.init
contrib/cygwin/: Makefile  README  ssh-config  ssh-host-config  ssh-user-config
contrib/gentoo/: sshd.confd  sshd.initd  sshd.service  sshd.socket  sshd_at.service
contrib/hpux/: README  sshd.rc
contrib/pam_ssh_agent_auth/: Makefile.in  pam-ssh-agent-auth.c  pam_ssh_agent_auth.8
contrib/redhat/: openssh.spec  sshd.init  sshd.init-5.x  sshd.pam
contrib/solaris/: README  build-pkg  buildpkg.sh  checkinstall.in  opensshd.in  pkginfo.in  postinstall.in  preremove  prototype  sshd-initscript.in
contrib/suse/: openssh.spec
ferrum/: .clang-format  ferrum.c  ferrum.h  notes.txt  readme.md
ferrum/doc/: ferrum.ssh.authentication
ferrum/docker/: docker.build.sh  docker.run.sh  dockerfile  dstart.sh  sshd_config
ferrum/pam/: libferrum.pam.c  readme.md
ferrumtest/: docker.run.for.test.sh  ferrum_test_common.h  ferrumtest.c  test_ferrum_test.c  unit_ferrum.c  unit_ferrum_common.h
m4/: openssh.m4  openssh.m4_css_json_js_java.js
openbsd-compat/: Makefile.in  arc4random.c  arc4random.h  arc4random_uniform.c  asr_private.h  base64.c  base64.h  basename.c  basename.h  bcrypt_pbkdf.c  bindresvport.c  bindresvport.h  bsd-arc4random.c  bsd-arc4random.h  bsd-asprintf.c  bsd-closefrom.c  bsd-cray.c  bsd-cray.h  bsd-cygwin_util.c  bsd-cygwin_util.h  bsd-err.c  bsd-flock.c  bsd-getentropy.c  bsd-getline.c  bsd-getpeereid.c  bsd-getpeereid.h  bsd-misc.c  bsd-misc.h  bsd-nextstep.c  bsd-nextstep.h  bsd-openpty.c  bsd-pledge.c  bsd-poll.c  bsd-poll.h  bsd-pselect.c  bsd-setres_id.c  bsd-signal.c  bsd-signal.h  bsd-snprintf.c  bsd-snprintf.h  (+107 more)
openbsd-compat/arpa/: nameser.h
openbsd-compat/machine/: spinlock.h
openbsd-compat/regress/: .cvsignore  Makefile.in  scan_scaledtest.c  snprintftest.c  strduptest.c  utimensattest.c
oqs-scripts/: build_liboqs.sh  build_openssh.sh  clone_liboqs.sh
oqs-template/: generate.py  generate.yml
oqs-template/README.md/: list_all_hybrid_kexs.fragment  list_all_kexs.fragment  list_all_sigs.fragment
oqs-template/kex.c/: add_kex_algs.fragment
oqs-template/kex.h/: add_kex_enums.fragment  declare_kex_prototypes.fragment  define_kex_pretty_names.fragment
oqs-template/kexgen.c/: add_client_switch_cases.fragment  add_init_switch_cases.fragment  add_reply_switch_cases.fragment
oqs-template/kexoqs.c/: define_kex_methods.fragment
oqs-template/kexoqsecdh.c/: define_kex_with_ec_methods.fragment
oqs-template/monitor.c/: apply_keystate.fragment
oqs-template/myproposal.h/: add_server_kexs.fragment
oqs-template/oqs-utils.c/: list_ecdsa_hybrids.fragment  list_rsa_hybrids.fragment
oqs-template/oqs-utils.h/: define_key_case_macros.fragment
oqs-template/pathnames.h/: add_id_file_paths.fragment  add_key_file_paths.fragment
oqs-template/readconf.c/: add_id_files.fragment
oqs-template/servconf.c/: server_add_hostkeys.fragment
oqs-template/sk-api.h/: define_ssh_sks.fragment
oqs-template/ssh-add.c/: add_default_id_files.fragment
oqs-template/ssh-keygen.c/: check_private_key_type.fragment  define_key_types.fragment  handle_ecdsa_hybrids.fragment  handle_id_files.fragment  print_resource_records.fragment
oqs-template/ssh-keyscan.c/: add_keytypes.fragment  add_proposal_server_host_key_algs.fragment  add_to_get_keytypes.fragment  assign_kex_gen_client.fragment  assign_kt_masks.fragment
oqs-template/ssh-keysign.c/: count_keytypes.fragment  open_key_files.fragment
oqs-template/ssh-oqs.c/: define_sig_functions.fragment
oqs-template/ssh-rsa.c/: list_l1_rsa_hybrids.fragment
oqs-test/: run_tests.sh  try_connection.py
regress/: .cvsignore  .gitattributes  Makefile  README.regress  addrmatch.sh  agent-getpeereid.sh  agent-pkcs11.sh  agent-ptrace.sh  agent-timeout.sh  agent.sh  apple_err.h  authinfo.sh  authorized_keys_hframed  banner.sh  broken-pipe.sh  cert-file.sh  cert-hostkey.sh  cert-userkey.sh  cfginclude.sh  cfgmatch.sh  cfgmatchlisten.sh  cfgparse.sh  channel-timeout.sh  check-perm.c  cipher-speed.sh  conch-ciphers.sh  connect-privsep.sh  connect-unix.sh  connect-uri.sh  connect.sh  dynamic-forward.sh  envpass.sh  exit-status-on-signal.sh  exit-status.sh  forcecommand.sh  forward-control.sh  forwarding.sh  gss-auth.sh  host-expand.sh  hostkey-agent.sh  (+62 more)
regress/pesterTests/: README.md  (+22 more)
scard/: Makefile.in  Ssh.java
(+263 files in other folders)
